Dodanie pliku CSS oraz struktury i wyglądu HTML

--- a/index.html
+++ b/index.html
@@ -3,28 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
 <body>
     <nav>
-
+        <p class="name">Gabriel Szewczyk</p>
+        <div class="shortcuts">
+            <a href="">O mnie</a>
+            <a href="">Programowanie</a>
+            <a href="">Detale</a>
+            <a href="">Doświadczenie</a>
+            <a href="">Projekty</a>
+            <a href="">Kontakt</a>
+        </div>
     </nav>
     <header>
-
+        <img src="" alt="Zdjęcie profilowe">
+        <div class="main-info">
+            <p id="name">Szewczyk Gabriel</p>
+            <p id="short-description">Krótki opis..</p>
+            <button>Dowiedz się więcej</button>
+        </div>
     </header>
     <section class="programing">
-
+        <div class="bar-border">
+            <div class="bar-progress"></div>
+        </div>
+        <div class="bar-border">
+            <div class="bar-progress"></div>
+        </div>
+        <div class="bar-border">
+            <div class="bar-progress"></div>
+        </div>
+        <div class="bar-border">
+            <div class="bar-progress"></div>
+        </div>
     </section>
     <section class="details">
         <section class="languages">
-
+            <div class="bar-border">
+                <div class="bar-progress"></div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress"></div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress"></div>
+            </div>
         </section>
         <section class="skills">
-
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
     </section>
-    <section class="history">
-
+    <section class="experience">
+        <!-- TODO -->
     </section>
     <section class="projects">
         <div class="project"></div>
@@ -33,7 +71,12 @@
         <div class="project"></div>
     </section>
     <footer>
-        
+        <div id="contact">
+
+        </div>
+        <div id="links">
+            
+        </div>
     </footer>
 </body>
 </html>
