Update navigation links and enhance progress bars with percentage indicators

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <nav>
         <p class="name">Gabriel Szewczyk</p>
         <div class="shortcuts">
-            <a href="">O mnie</a>
-            <a href="">Programowanie</a>
-            <a href="">Detale</a>
-            <a href="">Doświadczenie</a>
-            <a href="">Projekty</a>
-            <a href="">Kontakt</a>
+            <a href="#about">O mnie</a>
+            <a href="#programming">Programowanie</a>
+            <a href="#details">Detale</a>
+            <a href="#experience">Doświadczenie</a>
+            <a href="#projects">Projekty</a>
+            <a href="#contact">Kontakt</a>
         </div>
     </nav>
     <header>
@@ -26,30 +26,37 @@
             <button>Dowiedz się więcej</button>
         </div>
     </header>
-    <section class="programing">
+    <section id="programming" class="programing">
         <div class="bar-border">
-            <div class="bar-progress"></div>
+            <div class="bar-progress" style="width: 80%;"></div>
+            <span class="progress-text">80% JavaScript</span>
         </div>
         <div class="bar-border">
-            <div class="bar-progress"></div>
+            <div class="bar-progress" style="width: 70%;"></div>
+            <span class="progress-text">70% Python</span>
         </div>
         <div class="bar-border">
-            <div class="bar-progress"></div>
+            <div class="bar-progress" style="width: 60%;"></div>
+            <span class="progress-text">60% Java</span>
         </div>
         <div class="bar-border">
-            <div class="bar-progress"></div>
+            <div class="bar-progress" style="width: 50%;"></div>
+            <span class="progress-text">50% C#</span>
         </div>
     </section>
-    <section class="details">
+    <section id="details" class="details">
         <section class="languages">
             <div class="bar-border">
-                <div class="bar-progress"></div>
+                <div class="bar-progress" style="width: 90%;"></div>
+                <span class="progress-text">90% Angielski</span>
             </div>
             <div class="bar-border">
-                <div class="bar-progress"></div>
+                <div class="bar-progress" style="width: 100%;"></div>
+                <span class="progress-text">100% Polski</span>
             </div>
             <div class="bar-border">
-                <div class="bar-progress"></div>
+                <div class="bar-progress" style="width: 40%;"></div>
+                <span class="progress-text">40% Niemiecki</span>
             </div>
         </section>
         <section class="skills">
@@ -61,10 +68,10 @@
             </ul>
         </section>
     </section>
-    <section class="experience">
+    <section id="experience" class="experience">
         <!-- TODO -->
     </section>
-    <section class="projects">
+    <section id="projects" class="projects">
         <div class="project"></div>
         <div class="project"></div>
         <div class="project"></div>
