Ogólna poprawa wyglądu i małe zmiany strukturalne w HTML-u

--- a/index.html
+++ b/index.html
@@ -27,44 +27,66 @@
         </div>
     </header>
     <section id="programming" class="programing">
-        <div class="bar-border">
-            <div class="bar-progress" style="width: 80%;"></div>
-            <span class="progress-text">80% JavaScript</span>
-        </div>
-        <div class="bar-border">
-            <div class="bar-progress" style="width: 70%;"></div>
-            <span class="progress-text">70% Python</span>
-        </div>
-        <div class="bar-border">
-            <div class="bar-progress" style="width: 60%;"></div>
-            <span class="progress-text">60% Java</span>
-        </div>
-        <div class="bar-border">
-            <div class="bar-progress" style="width: 50%;"></div>
-            <span class="progress-text">50% C#</span>
+        <div class="prog-row">
+            <div class="lang-list">
+                <div class="bar-border">
+                    <div class="bar-progress" style="width: 90%;">
+                        <span class="progress-text">90% Angielski</span>
+                    </div>
+                </div>
+                <div class="bar-border">
+                    <div class="bar-progress" style="width: 100%;">
+                        <span class="progress-text">100% Polski</span>
+                    </div>
+                </div>
+                <div class="bar-border">
+                    <div class="bar-progress" style="width: 40%;">
+                        <span class="progress-text">40% Niemiecki</span>
+                    </div>
+                </div>
+            </div>
+            <div class="person-description">
+                <h2>O mnie</h2>
+                <p>Krótki opis: tutaj możesz dodać kilka zdań o sobie — doświadczenie, specjalizacje, co aktualnie robisz i czego szukasz. Możesz doprecyzować treść według potrzeb.</p>
+            </div>
         </div>
     </section>
     <section id="details" class="details">
         <section class="languages">
             <div class="bar-border">
-                <div class="bar-progress" style="width: 90%;"></div>
-                <span class="progress-text">90% Angielski</span>
+                <div class="bar-progress" style="width: 80%;">
+                    <span class="progress-text">80% JavaScript</span>
+                </div>
             </div>
             <div class="bar-border">
-                <div class="bar-progress" style="width: 100%;"></div>
-                <span class="progress-text">100% Polski</span>
+                <div class="bar-progress" style="width: 70%;">
+                    <span class="progress-text">70% Python</span>
+                </div>
             </div>
             <div class="bar-border">
-                <div class="bar-progress" style="width: 40%;"></div>
-                <span class="progress-text">40% Niemiecki</span>
+                <div class="bar-progress" style="width: 60%;">
+                    <span class="progress-text">60% Java</span>
+                </div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress" style="width: 50%;">
+                    <span class="progress-text">50% C#</span>
+                </div>
             </div>
         </section>
         <section class="skills">
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+            <ul class="terminal-list">
+                <li>Algorytmy i struktury danych</li>
+                <li>Rozwiązywanie problemów i myślenie analityczne</li>
+                <li>Debugowanie i diagnostyka błędów</li>
+                <li>Kontrola wersji (Git)</li>
+                <li>Testowanie i TDD</li>
+                <li>Czysty kod i wzorce projektowe</li>
+                <li>Praca z bazami danych (SQL / NoSQL)</li>
+                <li>Komunikacja i praca zespołowa</li>
+                <li>Optymalizacja wydajności</li>
+                <li>Bezpieczeństwo aplikacji</li>
+                <li>Dokumentacja i czytelność kodu</li>
             </ul>
         </section>
     </section>
