dodano responsywność, dopracowano wygląd, dodano tymczsowe zdjęcie profilowe

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pl">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Portfolio</title>
 </head>
+
 <body>
     <nav>
         <p class="name">Gabriel Szewczyk</p>
@@ -18,12 +20,11 @@
             <a href="#contact">Kontakt</a>
         </div>
     </nav>
-    <header>
-        <img src="" alt="Zdjęcie profilowe">
+    <header id="about">
+        <img src="assets/img/profile-user.png" alt="Zdjęcie profilowe">
         <div class="main-info">
             <p id="name">Szewczyk Gabriel</p>
-            <p id="short-description">Krótki opis..</p>
-            <button>Dowiedz się więcej</button>
+            <p id="short-description">Specjalista w projektowaniu i rozwijaniu wydajnych aplikacji internetowych.</p>
         </div>
     </header>
     <section id="programming" class="programing">
@@ -47,7 +48,8 @@
             </div>
             <div class="person-description">
                 <h2>O mnie</h2>
-                <p>Krótki opis: tutaj możesz dodać kilka zdań o sobie — doświadczenie, specjalizacje, co aktualnie robisz i czego szukasz. Możesz doprecyzować treść według potrzeb.</p>
+                <p>Krótki opis: tutaj możesz dodać kilka zdań o sobie — doświadczenie, specjalizacje, co aktualnie
+                    robisz i czego szukasz. Możesz doprecyzować treść według potrzeb.</p>
             </div>
         </div>
     </section>
@@ -104,8 +106,9 @@
 
         </div>
         <div id="links">
-            
+
         </div>
     </footer>
 </body>
+
 </html>
