--- a/index.html
+++ b/index.html
@@ -93,7 +93,29 @@
         </section>
     </section>
     <section id="experience" class="experience">
-        <!-- TODO -->
+        <h2>Doświadczenie</h2>
+        <ul class="experience-list">
+            <li class="exp-item">
+                <span class="exp-year">2025</span>
+                <div class="exp-desc">Projektowanie i wdrożenie mikroserwisów dla aplikacji SaaS — API, monitoring, automatyczne skalowanie.</div>
+            </li>
+            <li class="exp-item">
+                <span class="exp-year">2024</span>
+                <div class="exp-desc">Rozwój backendu (Python/Flask), optymalizacja zapytań, wdrożenia CI/CD i poprawa wydajności.</div>
+            </li>
+            <li class="exp-item">
+                <span class="exp-year">2023</span>
+                <div class="exp-desc">Praca nad aplikacją e‑commerce (React) — integracje płatności, testy end‑to‑end, dostępność.</div>
+            </li>
+            <li class="exp-item">
+                <span class="exp-year">2022</span>
+                <div class="exp-desc">Migracja bazy danych i refaktoryzacja systemu wewnętrznego; konteneryzacja (Docker) i automatyzacja środowisk.</div>
+            </li>
+            <li class="exp-item">
+                <span class="exp-year">2021</span>
+                <div class="exp-desc">Projekty open‑source i freelance — budowa stron, optymalizacje frontendu, wprowadzenie testów jednostkowych.</div>
+            </li>
+        </ul>
     </section>
     <section id="projects" class="projects">
         <div class="project"></div>
