dodano wygląd dla sekcji projekty

--- a/index.html
+++ b/index.html
@@ -118,10 +118,41 @@
         </ul>
     </section>
     <section id="projects" class="projects">
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project">
+            <div class="project-img" style="background-image: url('assets/img/project1.png');" role="img" aria-label="Zrzut ekranu projektu A"></div>
+            <div class="project-body">
+                <h3 class="project-title">Projekt A</h3>
+                <p class="project-desc">Aplikacja webowa do zarządzania zadaniami — React, Node.js, integracje z API.</p>
+                <a class="project-link" href="#" title="Pełny opis Projektu A">Zobacz więcej</a>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-img" style="background-image: url('assets/img/project2.png');" role="img" aria-label="Zrzut ekranu projektu B"></div>
+            <div class="project-body">
+                <h3 class="project-title">Projekt B</h3>
+                <p class="project-desc">Platforma e‑commerce — optymalizacje wydajności, testy E2E, integracja płatności.</p>
+                <a class="project-link" href="#" title="Pełny opis Projektu B">Zobacz więcej</a>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-img" style="background-image: url('assets/img/project3.png');" role="img" aria-label="Zrzut ekranu projektu C"></div>
+            <div class="project-body">
+                <h3 class="project-title">Projekt C</h3>
+                <p class="project-desc">Mikroserwisy i monitoring — konteneryzacja, automatyczne skalowanie i observability.</p>
+                <a class="project-link" href="#" title="Pełny opis Projektu C">Zobacz więcej</a>
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-img" style="background-image: url('assets/img/project4.png');" role="img" aria-label="Zrzut ekranu projektu D"></div>
+            <div class="project-body">
+                <h3 class="project-title">Projekt D</h3>
+                <p class="project-desc">Narzędzie do analizy danych — backend w Pythonie, optymalizacja zapytań, wizualizacje.</p>
+                <a class="project-link" href="#" title="Pełny opis Projektu D">Zobacz więcej</a>
+            </div>
+        </div>
     </section>
     <footer>
         <div id="contact">
