dodano przykladowe linki  i kontakt w sekcji footer

--- a/index.html
+++ b/index.html
@@ -156,10 +156,20 @@
     </section>
     <footer>
         <div id="contact">
-
+            <h3>Kontakt</h3>
+            <p class="contact-item"><strong>Email:</strong> <a href="mailto:gabriel@example.com">gabriel@example.com</a></p>
+            <p class="contact-item"><strong>Telefon:</strong> <a href="tel:+48123123123">+48 123 123 123</a></p>
+            <p class="contact-item"><strong>Lokalizacja:</strong> Warszawa, Polska</p>
+            <p class="contact-note">Dostępny do współpracy przy projektach webowych, konsultacjach technicznych oraz zleceniach freelance.</p>
         </div>
         <div id="links">
-
+            <h3>Linki</h3>
+            <ul class="footer-links">
+                <li><a href="https://github.com/username" target="_blank" rel="noopener">GitHub</a></li>
+                <li><a href="https://www.linkedin.com/in/username" target="_blank" rel="noopener">LinkedIn</a></li>
+                <li><a href="mailto:gabriel@example.com">Wyślij email</a></li>
+                <li><a href="assets/files/CV.pdf" target="_blank" rel="noopener">Pobierz CV (PDF)</a></li>
+            </ul>
         </div>
     </footer>
 </body>
