dodanie prawdziwych informacji oraz uzupełnienie sekcji projekty

--- a/index.html
+++ b/index.html
@@ -24,20 +24,20 @@
         <img src="assets/img/profile-user.png" alt="Zdjęcie profilowe">
         <div class="main-info">
             <p id="name">Szewczyk Gabriel</p>
-            <p id="short-description">Specjalista w projektowaniu i rozwijaniu wydajnych aplikacji internetowych.</p>
+            <p id="short-description">Ambitny uczeń kierunku technik programista, doskonalący umiejętności z zakresu programowania, projektowania aplikacji oraz nowoczesnych technologii informatycznych.</p>
         </div>
     </header>
     <section id="programming" class="programing">
         <div class="prog-row">
             <div class="lang-list">
                 <div class="bar-border">
-                    <div class="bar-progress" style="width: 90%;">
-                        <span class="progress-text">90% Angielski</span>
+                    <div class="bar-progress" style="width: 100%;">
+                        <span class="progress-text">100% Polski</span>
                     </div>
                 </div>
                 <div class="bar-border">
-                    <div class="bar-progress" style="width: 100%;">
-                        <span class="progress-text">100% Polski</span>
+                    <div class="bar-progress" style="width: 85%;">
+                        <span class="progress-text">85% Angielski</span>
                     </div>
                 </div>
                 <div class="bar-border">
@@ -48,31 +48,50 @@
             </div>
             <div class="person-description">
                 <h2>O mnie</h2>
-                <p>Krótki opis: tutaj możesz dodać kilka zdań o sobie — doświadczenie, specjalizacje, co aktualnie
-                    robisz i czego szukasz. Możesz doprecyzować treść według potrzeb.</p>
+                <p>Ambitny uczeń kierunku technik programista w ZSMEiE w Toruniu, rozwijający swoje umiejętności w zakresie programowania i tworzenia aplikacji. Pasjonuję się nowoczesnymi technologiami informatycznymi oraz praktycznym zastosowaniem zdobytej wiedzy. Systematycznie doskonalę swoje kompetencje w projektowaniu i testowaniu oprogramowania. Dążę do zdobycia doświadczenia, które pozwoli mi tworzyć funkcjonalne i nowoczesne rozwiązania programistyczne.</p>
             </div>
         </div>
     </section>
     <section id="details" class="details">
         <section class="languages">
             <div class="bar-border">
-                <div class="bar-progress" style="width: 80%;">
-                    <span class="progress-text">80% JavaScript</span>
+                <div class="bar-progress" style="width: 75%;">
+                    <span class="progress-text">75% C++</span>
                 </div>
             </div>
             <div class="bar-border">
                 <div class="bar-progress" style="width: 70%;">
-                    <span class="progress-text">70% Python</span>
+                    <span class="progress-text">70% HTML + CSS</span>
+                </div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress" style="width: 70%;">
+                    <span class="progress-text">70% SQL</span>
+                </div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress" style="width: 65%;">
+                    <span class="progress-text">65% Kotlin</span>
+                </div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress" style="width: 65%;">
+                    <span class="progress-text">65% JavaScript</span>
                 </div>
             </div>
             <div class="bar-border">
                 <div class="bar-progress" style="width: 60%;">
-                    <span class="progress-text">60% Java</span>
+                    <span class="progress-text">60% Python</span>
+                </div>
+            </div>
+            <div class="bar-border">
+                <div class="bar-progress" style="width: 55%;">
+                    <span class="progress-text">55% Java</span>
                 </div>
             </div>
             <div class="bar-border">
                 <div class="bar-progress" style="width: 50%;">
-                    <span class="progress-text">50% C#</span>
+                    <span class="progress-text">50% PHP</span>
                 </div>
             </div>
         </section>
@@ -97,78 +116,51 @@
         <ul class="experience-list">
             <li class="exp-item">
                 <span class="exp-year">2025</span>
-                <div class="exp-desc">Projektowanie i wdrożenie mikroserwisów dla aplikacji SaaS — API, monitoring, automatyczne skalowanie.</div>
+                <div class="exp-desc">Tworzenie i optymalizowanie aplikacji na system Android w Javie.</div>
             </li>
             <li class="exp-item">
                 <span class="exp-year">2024</span>
-                <div class="exp-desc">Rozwój backendu (Python/Flask), optymalizacja zapytań, wdrożenia CI/CD i poprawa wydajności.</div>
+                <div class="exp-desc">Tworzenie aplikacji desktopowych w Javie. Projektowanie aplikacji internetowych.</div>
             </li>
             <li class="exp-item">
                 <span class="exp-year">2023</span>
-                <div class="exp-desc">Praca nad aplikacją e‑commerce (React) — integracje płatności, testy end‑to‑end, dostępność.</div>
+                <div class="exp-desc">Projektowanie oraz zarządzanie bazami danych. Poznawanie języka SQL.</div>
             </li>
             <li class="exp-item">
                 <span class="exp-year">2022</span>
-                <div class="exp-desc">Migracja bazy danych i refaktoryzacja systemu wewnętrznego; konteneryzacja (Docker) i automatyzacja środowisk.</div>
-            </li>
-            <li class="exp-item">
-                <span class="exp-year">2021</span>
-                <div class="exp-desc">Projekty open‑source i freelance — budowa stron, optymalizacje frontendu, wprowadzenie testów jednostkowych.</div>
+                <div class="exp-desc">Aplikacje sprzętowo-programowe na systemach embedded.</div>
             </li>
         </ul>
     </section>
     <section id="projects" class="projects">
         <div class="project">
-            <div class="project-img" style="background-image: url('assets/img/project1.png');" role="img" aria-label="Zrzut ekranu projektu A"></div>
+            <div class="project-img" style="background-image: url('assets/img/project-pong.webp');" role="img" aria-label="Zrzut ekranu projektu pong"></div>
             <div class="project-body">
-                <h3 class="project-title">Projekt A</h3>
-                <p class="project-desc">Aplikacja webowa do zarządzania zadaniami — React, Node.js, integracje z API.</p>
-                <a class="project-link" href="#" title="Pełny opis Projektu A">Zobacz więcej</a>
+                <h3 class="project-title">Gra Pong</h3>
+                <p class="project-desc">Prosta gra typu Pong napisana w Javie. Gra umożliwia rozgrywkę dwuosobową</p>
             </div>
         </div>
 
         <div class="project">
-            <div class="project-img" style="background-image: url('assets/img/project2.png');" role="img" aria-label="Zrzut ekranu projektu B"></div>
+            <div class="project-img" style="background-image: url('assets/img/project-sklep.png');" role="img" aria-label="Zrzut ekranu projektu sklep"></div>
             <div class="project-body">
-                <h3 class="project-title">Projekt B</h3>
-                <p class="project-desc">Platforma e‑commerce — optymalizacje wydajności, testy E2E, integracja płatności.</p>
-                <a class="project-link" href="#" title="Pełny opis Projektu B">Zobacz więcej</a>
-            </div>
-        </div>
-
-        <div class="project">
-            <div class="project-img" style="background-image: url('assets/img/project3.png');" role="img" aria-label="Zrzut ekranu projektu C"></div>
-            <div class="project-body">
-                <h3 class="project-title">Projekt C</h3>
-                <p class="project-desc">Mikroserwisy i monitoring — konteneryzacja, automatyczne skalowanie i observability.</p>
-                <a class="project-link" href="#" title="Pełny opis Projektu C">Zobacz więcej</a>
-            </div>
-        </div>
-
-        <div class="project">
-            <div class="project-img" style="background-image: url('assets/img/project4.png');" role="img" aria-label="Zrzut ekranu projektu D"></div>
-            <div class="project-body">
-                <h3 class="project-title">Projekt D</h3>
-                <p class="project-desc">Narzędzie do analizy danych — backend w Pythonie, optymalizacja zapytań, wizualizacje.</p>
-                <a class="project-link" href="#" title="Pełny opis Projektu D">Zobacz więcej</a>
+                <h3 class="project-title">Projekt Sklepu</h3>
+                <p class="project-desc">Sklep napisany w PHP. Komunikacja z bazą danych MySQL. System logowania. Łatwe dodawnie większej ilości produktów</p>
             </div>
         </div>
     </section>
     <footer>
         <div id="contact">
             <h3>Kontakt</h3>
-            <p class="contact-item"><strong>Email:</strong> <a href="mailto:gabriel@example.com">gabriel@example.com</a></p>
-            <p class="contact-item"><strong>Telefon:</strong> <a href="tel:+48123123123">+48 123 123 123</a></p>
-            <p class="contact-item"><strong>Lokalizacja:</strong> Warszawa, Polska</p>
-            <p class="contact-note">Dostępny do współpracy przy projektach webowych, konsultacjach technicznych oraz zleceniach freelance.</p>
+            <p class="contact-item"><strong>Email:</strong> <a href="mailto:gabrielszewczyk716@gmail.com">gabrielszewczyk716@gmail.com</a></p>
+            <p class="contact-item"><strong>Telefon:</strong> <a href="tel:+48537210809">+48 537 210 809</a></p>
+            <p class="contact-item"><strong>Lokalizacja:</strong> Toruń, Polska</p>
         </div>
         <div id="links">
             <h3>Linki</h3>
             <ul class="footer-links">
-                <li><a href="https://github.com/username" target="_blank" rel="noopener">GitHub</a></li>
-                <li><a href="https://www.linkedin.com/in/username" target="_blank" rel="noopener">LinkedIn</a></li>
-                <li><a href="mailto:gabriel@example.com">Wyślij email</a></li>
-                <li><a href="assets/files/CV.pdf" target="_blank" rel="noopener">Pobierz CV (PDF)</a></li>
+                <li><a href="https://github.com/gabrielszewczyk" target="_blank" rel="noopener">GitHub</a></li>
+                <li><a href="assets/files/Gabriel-Szewczyk-CV.pdf" target="_blank" rel="noopener">Pobierz CV (PDF)</a></li>
             </ul>
         </div>
     </footer>
