--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Portfolio</title>
+    <link rel="shortcut icon" href="assets/img/portfolio.png" type="image/x-icon">
+    <title>Portfolio - Szewczyk Gabriel</title>
 </head>
 
 <body>
     <nav>
-        <p class="name">Gabriel Szewczyk</p>
+        <p class="name">Szewczyk Gabriel</p>
         <div class="shortcuts">
             <a href="#about">O mnie</a>
             <a href="#programming">Programowanie</a>
